# mktpl-claude-datasaas

./: .doc-guardian-queue  .env  .gitignore  .mcp-full.json  .mcp-lean.json  .mcp.json  .vscfavoriterc  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  claude-code-hhl-toolkit.code-workspace  create_labels.py  hhl-claude-agents.code-workspace  support-claude-mktplace.code-workspace  test_mcp_labels.py
.claude-plugin/: marketplace-full.json  marketplace-lean.json  marketplace.json
.claude-plugins/projman-marketplace/: marketplace.json
.claude-plugins/projman-test-marketplace/: marketplace.json
cmdb-assistant/: .mcp.json
cmdb-assistant/.claude-plugin/: plugin.json
cmdb-assistant/commands/: cmdb-device.md  cmdb-ip.md  cmdb-site.md
docs/: ARCHITECTURE.md  CANONICAL-PATHS.md  COMMANDS-CHEATSHEET.md  CONFIGURATION.md  CREATE_LABELS_GUIDE.md  DEBUGGING-CHECKLIST.md  LABEL_CREATION_COMPLETE.md  LIVE_API_TEST_RESULTS.md  MIGRATION-v9.md  MODEL-RECOMMENDATIONS.md  PROJMAN_TESTING_COMPLETE.md  STATUS_UPDATE_2025-11-21.md  TEST_01_PROJMAN.md  TEST_EXECUTION_REPORT.md  UPDATING.md  projman-implementation-plan.md  projman-plugin-analysis.md
docs/architecture/: agent-workflow.spec.md  component-map.spec.md
docs/designs/: data-seed.md  debug-mcp.md  ops-deploy-pipeline.md  ops-release-manager.md  saas-api-platform.md  saas-db-migrate.md  saas-react-platform.md  saas-test-pilot.md
docs/prompts/: INDEX.md
docs/references/: MCP-GITEA.md  MCP-WIKIJS.md  PLUGIN-PMO.md  PLUGIN-PROJMAN.md  PROJECT-SUMMARY.md
mcp-servers/contract-validator/: .doc-guardian-queue  pyproject.toml  requirements.txt  run.sh
mcp-servers/contract-validator/mcp_server/: __init__.py  parse_tools.py  report_tools.py  server.py  validation_tools.py
mcp-servers/contract-validator/tests/: __init__.py  test_parse_tools.py  test_report_tools.py  test_validation_tools.py
mcp-servers/data-platform/: README.md  pyproject.toml  requirements.txt  run.sh
mcp-servers/data-platform/mcp_server/: __init__.py  config.py  data_store.py  dbt_tools.py  pandas_tools.py  postgres_tools.py  server.py
mcp-servers/data-platform/tests/: __init__.py  test_config.py  test_data_store.py  test_dbt_tools.py  test_pandas_tools.py  test_postgres_tools.py
mcp-servers/gitea/: .doc-guardian-queue  CHANGELOG.md  README.md  TESTING.md  pyproject.toml  requirements.txt  run.sh
mcp-servers/gitea/mcp_server/: __init__.py  config.py  gitea_client.py  server.py  tool_registry.py
mcp-servers/gitea/mcp_server/tools/: __init__.py  issues.py  labels.py  milestones.py  pull_requests.py  wiki.py
mcp-servers/gitea/tests/: test_config.py  test_gitea_client.py  test_issues.py  test_labels.py
mcp-servers/netbox/: README.md  run.sh
mcp-servers/viz-platform/: .doc-guardian-queue  README.md  pyproject.toml  requirements.txt  run.sh
mcp-servers/wikijs/: README.md  TESTING.md  test_integration.py
plugins/clarity-assist/: README.md  claude-md-integration.md
plugins/claude-config-maintainer/: README.md  claude-md-integration.md
plugins/cmdb-assistant/: .mcp.json  README.md  claude-md-integration.md
plugins/code-sentinel/: README.md  claude-md-integration.md
plugins/contract-validator/: .mcp.json  README.md  claude-md-integration.md
plugins/data-platform/: .mcp.json  README.md  claude-md-integration.md
plugins/data-seed/: README.md  claude-md-integration.md
plugins/debug-mcp/: README.md  claude-md-integration.md
plugins/doc-guardian/: README.md  claude-md-integration.md
plugins/git-flow/: README.md  claude-md-integration.md
plugins/ops-deploy-pipeline/: README.md  claude-md-integration.md
plugins/ops-release-manager/: README.md  claude-md-integration.md
plugins/pr-review/: .mcp.json  README.md  claude-md-integration.md
plugins/project-hygiene/: README.md  claude-md-integration.md
plugins/projman/: .doc-guardian-queue  .mcp.json  CONFIGURATION.md  README.md  claude-md-integration.md
plugins/saas-api-platform/: README.md  claude-md-integration.md
plugins/saas-db-migrate/: README.md  claude-md-integration.md
plugins/saas-react-platform/: README.md  claude-md-integration.md
plugins/saas-test-pilot/: README.md  (+1 more)
projman/: .mcp.json  CONFIGURATION.md  README.md  plugin.json
scripts/: check-venv.sh  claude-launch.sh  install-plugin.sh  install-skill-aliases.sh  list-installed.sh  post-update.sh  release.sh  setup-venvs.sh  setup.sh  switch-profile.sh  uninstall-plugin.sh  validate-marketplace.sh  venv-repair.sh  verify-hooks.sh
(+584 files in other folders)
